--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -24,7 +24,7 @@
   width: 1440px;
   gap: 32px;
 }
-.input-container {
+.search-form {
   display: flex;
   flex-direction: row;
   gap: 8px;
@@ -43,11 +43,11 @@
   letter-spacing: 0.64px;
   padding: 0 16px;
 }
-.search-input:hover,
-.search-input:focus {
+.search-input:hover {
   border: 1px solid #000;
 }
-.search-input:active {
+.search-input:active,
+.search-input:focus {
   border: 1px solid #4e75ff;
 }
 
@@ -69,4 +69,93 @@
 }
 .search-button:hover {
   background-color: #6c8cff;
+}
+
+.loader,
+.loader:before,
+.loader:after {
+  border-radius: 50%;
+  width: 2.5em;
+  height: 2.5em;
+  animation-fill-mode: both;
+  animation: bblFadInOut 1.8s infinite ease-in-out;
+}
+.loader {
+  color: #cccccc;
+  font-size: 8px;
+  position: relative;
+  display: none;
+  text-indent: -9999em;
+  transform: translateZ(0);
+  animation-delay: -0.16s;
+}
+.loader:before,
+.loader:after {
+  content: '';
+  position: absolute;
+  top: 0;
+}
+.loader:before {
+  left: -3.5em;
+  animation-delay: -0.32s;
+}
+.loader:after {
+  left: 3.5em;
+}
+
+@keyframes bblFadInOut {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
+  }
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+.gallery-image {
+  width: 360px;
+  height: 200px;
+  object-fit: cover;
+}
+
+.gallery-image:hover {
+  filter: brightness(110%);
+  transition: brightness 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+span {
+  font-family: Montserrat;
+}
+.image-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 4px 6px;
+  border: solid 1px #b5b5b5;
+}
+.info-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.64px;
+}
+.info-name {
+  font-weight: 700;
 }
